More comments on datediff

--- a/pandas/01 - My Pandas Series.ipynb
+++ b/pandas/01 - My Pandas Series.ipynb
@@ -555,14 +555,14 @@
     "\n",
     "    Args:\n",
     "         date_part (str):\n",
-    "                            Year: year, y, yy, or yyyy\n",
-    "                            Quarter: quarter, qq, q\n",
-    "                            Month: month, mm, m\n",
+    "                            YY : Year, year, y, yy, or yyyy\n",
+    "                            QU : Quarter, quarter, qq, q\n",
+    "                            MO : Month, month, mm, m\n",
     "                            Day: dayofyear, day, dd, d\n",
-    "                            Week: week, wk, ww\n",
-    "                            Hour: hour, hh\n",
-    "                            Minute: minute, mi, n\n",
-    "                            Second: second, ss, s\n",
+    "                            WK : Week, week, wk, ww\n",
+    "                            HR : Hour, hour, hh\n",
+    "                            MI : Minute, minute, mi, n\n",
+    "                            SS : Second, second, ss, s\n",
     "\n",
     "        orderdate (str):    is the starting date for the date difference\n",
     "        deliverydate (str): is the ending date for the date difference\n",
