Corrected Dataeadd & Datefiff with ChatGPT for better accuracy

--- a/pandas/01 - My Pandas Series.ipynb
+++ b/pandas/01 - My Pandas Series.ipynb
@@ -269,7 +269,7 @@
     "1. <font color=#f5b042>'datediff'</font>\n",
     "    * <font color=#f5b042>Calculates the difference in days between two dates</font>\n",
     "    * <font color=#f5b042>Both dates are converted to datetime objects, and the difference in days is returned.</font>\n",
-    "##### <font color=red>****Reading CSV Data****</font>\n",
+    "##### <font color=red>****Reading CSV Data into a DataFrame for manipulation****</font>\n",
     "1. <font color=#f5b042>The data is read from a CSV file named \"ecommerce.csv\" into a DataFrame 'df'.</font>\n",
     "    * <font color=#f5b042>This function takes a date string (orderdate) and returns the month and year as integers.</font>\n",
     "1. <font color=#f5b042>Applying Functions to DataFrame:</font>\n",
@@ -354,83 +354,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to calculate the difference in days between two dates\n",
-    "from datetime import datetime\n",
-    "\n",
-    "def datediff(date_part:str,orderdate: str, deliverydate: str) -> int:\n",
-    "    \"\"\"Function to calculate the difference between two dates based upon the date_part\n",
-    "    Args:\n",
-    "        date_part (str):\n",
-    "                            Year: year, y, yy, or yyyy\n",
-    "                            Quarter: quarter, qq, q\n",
-    "                            Month: month, mm, m\n",
-    "                            Day: dayofyear, day, dd, d\n",
-    "                            Week: week, wk, ww\n",
-    "                            Hour: hour, hh\n",
-    "                            Minute: minute, mi, n\n",
-    "                            Second: second, ss, s\n",
-    "\n",
-    "        orderdate (str):    is the starting date for the date difference\n",
-    "        deliverydate (str): is the ending date for the date difference\n",
-    "\n",
-    "    Returns:\n",
-    "        int: The date difference between the two dates \n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        # First, try parsing with 'M/D/YYYY' format\n",
-    "        start_date = datetime.strptime(orderdate, '%m/%d/%Y')\n",
-    "        end_date = datetime.strptime(deliverydate, '%m/%d/%Y')\n",
-    "    except ValueError:\n",
-    "        # If it fails, try parsing with 'M/D/YY' format\n",
-    "        start_date = datetime.strptime(orderdate, '%m/%d/%y')\n",
-    "        end_date = datetime.strptime(deliverydate, '%m/%d/%y')\n",
-    "        \n",
-    "    date_part_units = {\n",
-    "        #Year: year, y, yy, or yyyy\n",
-    "        'Y': lambda: (end_date - start_date).year,\n",
-    "        #Quarter: quarter, qq, q\n",
-    "        'Q': (end_date - start_date).quarter,\n",
-    "        #Month: month, mm, m\n",
-    "        'M': (end_date - start_date).month,\n",
-    "        #Day: dayofyear, day, dd, d\n",
-    "        'D':(end_date - start_date).days,\n",
-    "        #Week: week, wk, ww\n",
-    "        'W':(end_date - start_date).week,\n",
-    "        #Hour: hour, hh\n",
-    "        'H': (end_date - start_date).hour,\n",
-    "        #Minute: minute, mi, n\n",
-    "        'M':(end_date - start_date).minute,\n",
-    "        #Second: second, ss, s\n",
-    "        'S':(end_date - start_date).seconds\n",
-    "    }    \n",
-    "    return date_part_units.get(date_part.upper(),lambda:None)\n",
-    "\n",
-    "a=datediff('d','20240115','20240116')\n",
-    "print(a)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "4\n"
      ]
     }
    ],
    "source": [
     "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "\n",
     "def datediff(date_part: str, orderdate: str, deliverydate: str) -> int:\n",
-    "    # \n",
     "    \"\"\"_Function to calculate the difference between two dates based on the date_part\n",
     "\n",
     "    Args:\n",
@@ -457,22 +396,82 @@
     "    except ValueError:\n",
     "        return None  # Return None if date format is incorrect\n",
     "\n",
-    "    delta = end_date - start_date\n",
+    "    delta = relativedelta(end_date, start_date)\n",
     "\n",
     "    date_part_units = {\n",
-    "        'YY': lambda: delta.days // 365.25,\n",
-    "        'QU': lambda: (delta.days // 90),\n",
-    "        'MO': lambda: (delta.days // 30),\n",
-    "        'DD': lambda: delta.days,\n",
-    "        'WK': lambda: (delta.days // 7),\n",
-    "        'HR': lambda: (delta.total_seconds() // 3600),\n",
-    "        'MI': lambda: (delta.total_seconds() // 60),\n",
-    "        'SS': lambda: delta.total_seconds()\n",
+    "        'YY': lambda: delta.years,\n",
+    "        'QU': lambda: (delta.years * 4) + (delta.months // 3),\n",
+    "        'MO': lambda: (delta.years * 12) + delta.months,\n",
+    "        'DD': lambda: (end_date - start_date).days,\n",
+    "        'WK': lambda: ((end_date - start_date).days // 7),\n",
+    "        'HR': lambda: ((end_date - start_date).total_seconds() // 3600),\n",
+    "        'MI': lambda: ((end_date - start_date).total_seconds() // 60),\n",
+    "        'SS': lambda: (end_date - start_date).total_seconds()\n",
     "    }\n",
     "\n",
     "    return date_part_units.get(date_part.upper(), lambda: None)()\n",
     "\n",
-    "a = datediff('YY', '20240102', '20240116')\n",
+    "a = datediff('QU', '20240102', '20250123')\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-01 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta\n",
+    "\n",
+    "def dateadd(date_part: str, units_number: int, orderdate: str) -> datetime:\n",
+    "    \"\"\"\n",
+    "    Function to calculate the units_number to a date based upon the date_part\n",
+    "    Args:\n",
+    "        date_part (str):    YY, QU, MO, Day, WK, HR, MI, SS\n",
+    "                            YY : Year, year, y, yy, or yyyy\n",
+    "                            QU : Quarter, quarter, qq, q\n",
+    "                            MO : Month, month, mm, m\n",
+    "                            Day: dayofyear, day, dd, d\n",
+    "                            WK : Week, week, wk, ww\n",
+    "                            HR : Hour, hour, hh\n",
+    "                            MI : Minute, minute, mi, n\n",
+    "                            SS : Second, second, ss, s\n",
+    "\n",
+    "        units_number (int): Number of units to add\n",
+    "        orderdate (str): Starting date in 'M/D/YYYY' or 'M/D/YY' format\n",
+    "\n",
+    "    Returns:\n",
+    "        datetime: New date after adding the specified units\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        start_date = datetime.strptime(orderdate, '%m/%d/%Y')\n",
+    "    except ValueError:\n",
+    "        start_date = datetime.strptime(orderdate, '%m/%d/%y')\n",
+    "\n",
+    "    date_part_units = {\n",
+    "        'YY': lambda: start_date + relativedelta(years=units_number),\n",
+    "        'QU': lambda: start_date + relativedelta(months=units_number * 3),\n",
+    "        'MO': lambda: start_date + relativedelta(months=units_number),\n",
+    "        'DD': lambda: start_date + relativedelta(days=units_number),\n",
+    "        'WK': lambda: start_date + relativedelta(weeks=units_number),\n",
+    "        'HR': lambda: start_date + relativedelta(hours=units_number),\n",
+    "        'MI': lambda: start_date + relativedelta(minutes=units_number),\n",
+    "        'SS': lambda: start_date + relativedelta(seconds=units_number),\n",
+    "    }\n",
+    "\n",
+    "    return date_part_units.get(date_part.upper(), lambda: None)()\n",
+    "\n",
+    "# Example usage\n",
+    "a = dateadd('YY', 1, '01/01/2024')\n",
     "print(a)\n"
    ]
   }
