Minor changes to the markdown and comments

--- a/pandas/01 - My Pandas Series.ipynb
+++ b/pandas/01 - My Pandas Series.ipynb
@@ -10,21 +10,34 @@
     "1. <font color=#f5b042>'pandas' is a popular data manipulation library in Python.</font>\n",
     "1. <font color=#f5b042>'datetime' is a module for manipulating dates and times.</font>\n",
     "##### <font color=red>****Function****</font>\n",
-    "1. <font color=#f5b042>'get_month_and_year''</font>\n",
-    "    * <font color=#f5b042>This function takes a date string (orderdate) and returns the month and year as integers.</font>\n",
-    "    * <font color=#f5b042>It first tries to parse the date assuming it's in the format 'M/D/YYYY'. If this fails (raises ValueError), it tries 'M/D/YY'.\n",
-    "    datetime.strptime is used to convert a string to a datetime object.</font>\n",
+    "1. <font color=#f5b042>'get_month_day_and_year''</font>\n",
+    "    * <font color=#f5b042>This function takes a date string (orderdate) and returns the month, day, and year as (int, int, int).</font>\n",
+    "    * <font color=#f5b042>This code fragment is designed to flexibly parse a date string that could be in various possible formats that fit  date_formats = ['%y%m%d', '%Y%m%d', '%m/%d/%Y','%m/%d/%y', '%Y-%m-%d','%y-%m-%d','%d-%m-%Y', '%d/%m/%Y'], returning the date components once a matching format is found, or continuing to try other formats upon failures.</font>\n",
     "1. <font color=#f5b042>'create_calendar_year_quarter'</font>\n",
     "    * <font color=#f5b042>This function takes a date string (orderdate) and returns the month and year as integers.</font>\n",
-    "    * <font color=#f5b042>It first tries to parse the date assuming it's in the format 'M/D/YYYY'. If this fails (raises ValueError), it tries 'M/D/YY'.\n",
-    "    datetime.strptime is used to convert a string to a datetime object.</font>\n",
+    "    * <font color=#f5b042>It calls thisfunction get_month_day_and_year.  It unopacks the month, day , year = get_month_day_and_year(orderdate) with a month, day and year.</font>\n",
     "    * <font color=#f5b042>'datetime.strptime is used to convert a string to a datetime object.'</font>\n",
     "1. <font color=#f5b042>'create_fiscal_year_quarter'</font>\n",
     "    * <font color=#f5b042>Similar to create_calendar_year_quarter, but for fiscal quarters.</font>\n",
     "    * <font color=#f5b042>Fiscal year is considered to start in July, so the fiscal year is incremented if the month is between July and December since fiscal year is based upon the year of the months between Juanuary and June </font>\n",
     "1. <font color=#f5b042>'datediff'</font>\n",
     "    * <font color=#f5b042>Calculates the difference in days between two dates</font>\n",
-    "    * <font color=#f5b042>Both dates are converted to datetime objects, and the difference in days is returned.</font>\n",
+    "    * <font color=#f5b042>Both dates are converted to datetime objects, by the following code fragment: </font>\n",
+    "        1. <font color=#f5b042>mm,dd,yyyy = get_month_day_and_year(orderdate) </font>\n",
+    "        1. <font color=#f5b042>start_date = datetime(yyyy,mm,dd)</font>\n",
+    "        1. <font color=#f5b042>mm,dd,yyyy = get_month_day_and_year(deliverydate) </font>\n",
+    "        1. <font color=#f5b042>start_date = datetime(yyyy,mm,dd)</font>\n",
+    "    * <font color=#f5b042>the difference in days is returned. </font>\n",
+    "1. <font color=#f5b042>'dateadd'</font>\n",
+    "    * <font color=#f5b042>Calculates the difference in days between two dates</font>\n",
+    "    * <font color=#f5b042>Both dates are converted to datetime objects, by the following code fragment: </font>\n",
+    "        1. <font color=#f5b042>mm,dd,yyyy = get_month_day_and_year(orderdate) </font>\n",
+    "        1. <font color=#f5b042>start_date = datetime(yyyy,mm,dd)</font>\n",
+    "        1. <font color=#f5b042>mm,dd,yyyy = get_month_day_and_year(deliverydate) </font>\n",
+    "        1. <font color=#f5b042>start_date = datetime(yyyy,mm,dd)</font>\n",
+    "    * <font color=#f5b042>the difference in days is returned. </font>\n",
+    "               .\n",
+    "      \n",
     "##### <font color=red>****Reading CSV Data into a DataFrame for manipulation****</font>\n",
     "1. <font color=#f5b042>The data is read from a CSV file named \"ecommerce.csv\" into a DataFrame 'df'.</font>\n",
     "    * <font color=#f5b042>This function takes a date string (orderdate) and returns the month and year as integers.</font>\n",
@@ -176,7 +189,8 @@
     "\n",
     "    Returns:\n",
     "        str: _description_\n",
-    "    \"\"\"    month, day , year = get_month_day_and_year(orderdate)\n",
+    "    \"\"\"   \n",
+    "    month, day , year = get_month_day_and_year(orderdate)\n",
     "      \n",
     "    if 1 <= month <= 3:\n",
     "        return f\"Calendar year: {year}: Quarter I\"\n",
