Extended parse_using_date_strptime_format to include Month Name and Short month Name

--- a/pandas/01 - My Pandas Series.ipynb
+++ b/pandas/01 - My Pandas Series.ipynb
@@ -132,7 +132,9 @@
     "    yymmdd = 3\n",
     "    mmddyy = 4\n",
     "    mmyyyy = 5\n",
-    "    mmyy = 6  \n",
+    "    mmyy = 6\n",
+    "    monthname_ddyy =7\n",
+    "    shortmonth_ddyy = 8\n",
     "\n",
     "StrpTime_code_list = list(map(str,StrpTime))\n",
     "print(StrpTime_code_list)\n",
@@ -171,6 +173,7 @@
     "DATE_SEPARATOR = {\n",
     "                'slash': '/',\n",
     "                'hypen': '-',\n",
+    "                'comma': ',',\n",
     "                'none' : True\n",
     "            }\n",
     "print (DATE_SEPARATOR)  \n",
@@ -184,8 +187,7 @@
     "                }\n",
     "            }\n",
     "print(YYYYMMDD)\n",
-    "\n",
-    "YYMMDD = {'yymmdd': \n",
+    "YYMMDD = {'': \n",
     "                {\n",
     "                    'DESCRIPTION': 'Year without century, month and day',\n",
     "                    'NUMBER_OF_SEPARATORS': 2,\n",
@@ -194,8 +196,6 @@
     "                }\n",
     "            }\n",
     "print(YYMMDD)\n",
-    "#  date_formats = ['%y%m%d', '%Y%m%d', '%m/%d/%Y','%m/%d/%y', '%Y-%m-%d','%y-%m-%d','%d-%m-%Y', '%d/%m/%Y']\n",
-    "# ['StrpTime.mmyyyy', 'StrpTime.mmyy']  'StrpTime.yyyymmdd', 'StrpTime.yymmdd', 'StrpTime.mmddyyyy', 'StrpTime.mmddyy',\n",
     "\n",
     "MMDDYYYY = {'mmddyyyy': \n",
     "                {\n",
@@ -236,26 +236,47 @@
     "            }\n",
     "print(MMYYYY)\n",
     "\n",
-    "all_date_formats = dict(**YYYYMMDD,**YYMMDD,**MMDDYYYY,**MMDDYY,**MMYYYY,**MMYY)\n",
+    "MONTHNAME_DDYY = {'monthname_ddyy': \n",
+    "                {\n",
+    "                    'DESCRIPTION': 'full month name, day and Year without century,',\n",
+    "                    'NUMBER_OF_SEPARATORS': 0,\n",
+    "                    'DATE_FORMAT_SEPARATOR': '%B %d %y',\n",
+    "                    'DATE_FORMAT_NONE': '%B%d%y'\n",
+    "                }\n",
+    "            }\n",
+    "print(MONTHNAME_DDYY)\n",
+    "\n",
+    "SHORTMONTH_DDYY = {'shortmonth_ddyy': \n",
+    "                {\n",
+    "                    'DESCRIPTION': 'short month name, day and Year without century,',\n",
+    "                    'NUMBER_OF_SEPARATORS': 0,\n",
+    "                    'DATE_FORMAT_SEPARATOR': '%B %d %y',\n",
+    "                    'DATE_FORMAT_NONE': '%B%d%y'\n",
+    "                }\n",
+    "            }\n",
+    "print(MONTHNAME_DDYY)\n",
+    "\n",
+    "all_date_formats = dict(**YYYYMMDD,**YYMMDD,**MMDDYYYY,**MMDDYY,**MMYYYY,**MMYY,**MONTHNAME_DDYY,**SHORTMONTH_DDYY)\n",
     "print(all_date_formats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "month: 5  day: 1  year: 1996\n"
+      "month: 12  day: 23  year: 2023\n"
      ]
     }
    ],
    "source": [
     "from enum import Enum\n",
     "from types import MappingProxyType\n",
+    "from datetime import datetime\n",
     "\n",
     "class StrpTime(Enum):\n",
     "    yyyymmdd = 1\n",
@@ -264,20 +285,24 @@
     "    mmddyy = 4\n",
     "    mmyyyy = 5\n",
     "    mmyy = 6  \n",
-    "\n",
-    "StrpTime_code_list = list(map(str, StrpTime))\n",
+    "    monthname_ddyyyy = 7\n",
+    "    shortmonth_ddyyyy = 8\n",
+    "    monthname_ddyy = 9\n",
+    "    shortmonth_ddyy = 10\n",
     "\n",
     "class DateSeparator(Enum):\n",
     "    slash = 1\n",
-    "    hypen = 2\n",
-    "    none = 3\n",
+    "    hyphen = 2\n",
+    "    space = 3\n",
+    "    none = 4\n",
     "\n",
     "DATE_SEPARATOR = {\n",
     "    'slash': '/',\n",
-    "    'hypen': '-',\n",
+    "    'hyphen': '-',\n",
+    "    'space': ' ',\n",
+    "    'comma': ',',\n",
     "    'none': ''\n",
     "}\n",
-    "\n",
     "YYYYMMDD = {\n",
     "    'yyyymmdd': {\n",
     "        'DESCRIPTION': 'Year with century, month and day',\n",
@@ -332,14 +357,60 @@
     "    }\n",
     "}\n",
     "\n",
+    "MONTHNAME_DDYYYY = {'monthname_ddyyyy': \n",
+    "                {\n",
+    "                    'DESCRIPTION': 'full month name, day and Year with century,',\n",
+    "                    'NUMBER_OF_SEPARATORS': 2,\n",
+    "                    'DATE_FORMAT_SEPARATOR': '%B{}%d{}%Y',\n",
+    "                    'DATE_FORMAT_NONE': '%B%d%Y'\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "SHORTMONTH_DDYYYY = {'shortmonth_ddyyyy': \n",
+    "                {\n",
+    "                    'DESCRIPTION': 'short month name, day and Year with century,',\n",
+    "                    'NUMBER_OF_SEPARATORS': 2,\n",
+    "                    'DATE_FORMAT_SEPARATOR': '%b{}%d{}%Y',\n",
+    "                    'DATE_FORMAT_NONE': '%b%d%Y'\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "MONTHNAME_DDYY = {'monthname_ddyy': \n",
+    "                {\n",
+    "                    'DESCRIPTION': 'full month name, day and Year without century,',\n",
+    "                    'NUMBER_OF_SEPARATORS': 2,\n",
+    "                    'DATE_FORMAT_SEPARATOR': '%B{}%d{}%y',\n",
+    "                    'DATE_FORMAT_NONE': '%B%d%y'\n",
+    "                }\n",
+    "            }\n",
+    "\n",
+    "SHORTMONTH_DDYY = {'shortmonth_ddyy': \n",
+    "                {\n",
+    "                    'DESCRIPTION': 'short month name, day and Year without century,',\n",
+    "                    'NUMBER_OF_SEPARATORS': 2,\n",
+    "                    'DATE_FORMAT_SEPARATOR': '%b{}%d{}%y',\n",
+    "                    'DATE_FORMAT_NONE': '%b%d%y'\n",
+    "                }\n",
+    "            }\n",
+    "\n",
     "# _all_date_formats is a private dictionary variable which is made immutable by using the MappingProxyType\n",
-    "_all_date_formats = MappingProxyType({**YYYYMMDD, **YYMMDD, **MMDDYYYY, **MMDDYY, **MMYYYY, **MMYY})\n",
+    "_all_date_formats = MappingProxyType(dict(**YYYYMMDD,**YYMMDD,**MMDDYYYY,**MMDDYY,**MMYYYY,**MMYY,**MONTHNAME_DDYYYY,**SHORTMONTH_DDYYYY,**SHORTMONTH_DDYY,**MONTHNAME_DDYY))\n",
     "\n",
     "# _date_separation is a private dictionary variable which is made immutable by using the MappingProxyType\n",
     "_date_separation = MappingProxyType(DATE_SEPARATOR)\n",
     "\n",
-    "def parse_using_date_strptime_format(strp_time: StrpTime, date_separator: DateSeparator,orderdate)-> (int, int, int):\n",
-    "    \n",
+    "\n",
+    "def parse_using_date_strptime_format(strp_time: StrpTime, date_separator: DateSeparator, orderdate) -> (int, int, int):\n",
+    "    \"\"\"Parse a date string into month, day, and year components.\n",
+    "\n",
+    "    Args:\n",
+    "        strp_time (StrpTime): The format of the date string.\n",
+    "        date_separator (DateSeparator): The separator used in the date string.\n",
+    "        orderdate (str): The date string to parse.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the month, day, and year as integers.\n",
+    "    \"\"\"    \n",
     "    separator = _date_separation[date_separator.name]\n",
     "    date_format_info = _all_date_formats[strp_time.name]\n",
     "    date_strptime_template = date_format_info['DATE_FORMAT_NONE'] if date_separator.name == 'none' else date_format_info['DATE_FORMAT_SEPARATOR']\n",
@@ -355,8 +426,8 @@
     "    parsed_date = datetime.strptime(orderdate, date_strptime_paramterized_format)\n",
     "    return parsed_date.month, parsed_date.day, parsed_date.year\n",
     "  \n",
-    "mm, dd, yyyy = parse_using_date_strptime_format(StrpTime.mmyy,DateSeparator.slash,'5/96')\n",
-    "print(f\"month: {mm}  day: {dd}  year: {yyyy}\")\n"
+    "mm, dd, yyyy = parse_using_date_strptime_format(StrpTime.shortmonth_ddyy, DateSeparator.space, 'Dec 23 23')\n",
+    "print(f\"month: {mm}  day: {dd}  year: {yyyy}\")"
    ]
   },
   {
