re-synching 01 - My Pandas Series.ipynb

--- a/pandas/01 - My Pandas Series.ipynb
+++ b/pandas/01 - My Pandas Series.ipynb
@@ -107,7 +107,8 @@
     "    raise ValueError(\"Date format not recognized\")\n",
     "\n",
     "mm, dd, yyyy = get_month_day_and_year('5/27/96')\n",
-    "print(f\"month: {mm}  day: {dd}  year: {yyyy}\")\n"
+    "print(f\"month: {mm}  day: {dd}  year: {yyyy}\")\n",
+    "# month: 5  day: 27  year: 1996\n"
    ]
   },
   {
