--- a/pandas/01-My Panda dates.ipynb
+++ b/pandas/01-My Panda dates.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
     "                            {\n",
     "                                'description' :'August is always a fiscal year quarters',\n",
     "                                'short_year'  : False,\n",
-    "                               'determine_quarter_tuple':((8, 10, \"I\"), (11, 13, \"II\"), (2, 4, \"III\"), (5, 7, \"IV\"))\n",
+    "                               'determine_quarter_tuple':((8,9,10, \"I\"), (11,12,1, \"II\"), (2,3,4, \"III\"), (5,6,7, \"IV\"))\n",
     "                            },\n",
     "                       'September' :\n",
     "                            {\n",
@@ -697,14 +697,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start_date: 2000-01-01 00:00:00   end_date: 2024-01-01 00:00:00\n",
       "delta_units: 24\n"
      ]
     }
@@ -737,7 +736,7 @@
     "    start_date = datetime(year,month, day)\n",
     "    month, day , year = parse_using_date_strptime_format(strp_time, date_separator, deliverydate)\n",
     "    end_date = datetime(year,month, day)\n",
-    "    print(f\"start_date: {start_date}   end_date: {end_date}\")\n",
+    "    #print(f\"start_date: {start_date}   end_date: {end_date}\")\n",
     "    delta = relativedelta(end_date, start_date)\n",
     "\n",
     "    date_part_units = {\n",
@@ -844,56 +843,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "\n",
-    "# Read the CSV data into a DataFrame\n",
-    "df = pd.read_csv(\"ecommerce.csv\")\n",
-    "\n",
-    "# Apply the functions to the DataFrame\n",
-    "\n",
-    "df['order_cy_quarter'] = df['order_date'].apply(create_calendar_year_quarter(StrpTime.mmddyy,DateSeparator.slash,['order_date']))\n",
-    "'''\n",
-    "df['delivery_cy_quarter'] = df['delivery_date'].apply(lambda x :create_calendar_year_quarter(StrpTime.yymmdd, DateSeparator.slash,hyphen,x['delivery_date']))\n",
-    "df['order_fy_quarter'] = df['order_date'].apply(lambda x :create_fiscal_year_quarter(StrpTime.yymmdd, DateSeparator.slash,x['order_date']))\n",
-    "df['delivery_fy_quarter'] = df['delivery_date'].apply(lambda x :create_fiscal_year_quarter(StrpTime.yymmdd, DateSeparator.slash,x['delivery_date']))\n",
-    "df['order_to_delivery_days'] = df.apply(lambda x: datediff(StrpTime.yymmdd, DateSeparator.slash,'YY', x['order_date'], x['delivery_date']), axis=1)\n",
-    "# Display the DataFrame\n",
-    "'''\n",
-    "print(df.head(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TSQLtoPythonDatefunctions() :\n",
-    "    \n",
-    "    from datetime import datetime\n",
-    "\n",
-    "    def __init__(self) -> None:\n",
-    "        pass\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FY2025: Quarter I\n",
-      "FY2025: Quarter II\n",
       "FY2025: Quarter III\n",
-      "FY2025: Quarter IV\n"
+      "FY2025: Quarter IV\n",
+      "FY2025: Quarter I\n",
+      "FY2025: Quarter II\n"
      ]
     }
    ],
@@ -907,7 +867,7 @@
     "    quarter_data_tuples = QUARTER_ANCHOR_MONTH[quarter_anchor_month.name]['determine_quarter_tuple']\n",
     "\n",
     "    determined_quarter_string = \"FY{}: Quarter {}\" if quarter_anchor_month.value > 1 else \"CY{}: Quarter {}\"\n",
-    "    year_plus_one = year + 1 if 1 < quarter_anchor_month.value < 13 else year\n",
+    "    year_plus_one = year + 1 if 1 < month < 13 else year\n",
     "    \n",
     "    # Finding the quarter number for the given month\n",
     "    quarter_number = next((quarter for start_month,middle_month, end_month, quarter in quarter_data_tuples if month in [start_month,middle_month, end_month]), None)\n",
@@ -917,10 +877,54 @@
     "    return determined_quarter_string.format(year_plus_one,quarter_number)\n",
     "\n",
     "# Test the function with different dates\n",
-    "print(determine_quarter_and_year(QuarterAnchorMonth.December, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-02-16'))\n",
-    "print(determine_quarter_and_year(QuarterAnchorMonth.December, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-05-28'))\n",
-    "print(determine_quarter_and_year(QuarterAnchorMonth.December, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-08-28'))\n",
-    "print(determine_quarter_and_year(QuarterAnchorMonth.December, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-11-28'))"
+    "print(determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-02-16'))\n",
+    "print(determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-05-28'))\n",
+    "print(determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-08-28'))\n",
+    "print(determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.yyyymmdd, DateSeparator.hyphen, '2024-11-28'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ID order_date delivery_date  order_to_delivery_days     order_cy_quarter  \\\n",
+      "0   1    5/24/98        2/5/99                     257   CY1999: Quarter II   \n",
+      "1   2    4/22/92        3/6/98                    2144   CY1993: Quarter II   \n",
+      "2   4    2/10/91       8/26/92                     563    CY1992: Quarter I   \n",
+      "3   5    7/21/92      11/20/97                    1948  CY1993: Quarter III   \n",
+      "4   7     9/2/93       6/10/98                    1742  CY1994: Quarter III   \n",
+      "\n",
+      "   delivery_cy_quarter     order_fy_quarter  delivery_fy_quarter  \n",
+      "0    CY2000: Quarter I   FY1999: Quarter IV  FY2000: Quarter III  \n",
+      "1    CY1999: Quarter I   FY1993: Quarter IV  FY1999: Quarter III  \n",
+      "2  CY1993: Quarter III  FY1992: Quarter III    FY1993: Quarter I  \n",
+      "3   CY1998: Quarter IV    FY1993: Quarter I   FY1998: Quarter II  \n",
+      "4   CY1999: Quarter II    FY1994: Quarter I   FY1999: Quarter IV  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Read the CSV data into a DataFrame\n",
+    "df = pd.read_csv(\"ecommerce.csv\")\n",
+    "\n",
+    "# Apply the functions to the DataFrame\n",
+    "\n",
+    "df['order_to_delivery_days'] = df.apply(lambda x: datediff(StrpTime.mmddyy, DateSeparator.slash, 'DD', x['order_date'], x['delivery_date']), axis=1)\n",
+    "df['order_cy_quarter'] = df['order_date'].apply(lambda x: determine_quarter_and_year(QuarterAnchorMonth.January, StrpTime.mmddyy, DateSeparator.slash, x))\n",
+    "df['delivery_cy_quarter'] = df['delivery_date'].apply(lambda x :determine_quarter_and_year(QuarterAnchorMonth.January, StrpTime.mmddyy, DateSeparator.slash, x))\n",
+    "df['order_fy_quarter'] = df['order_date'].apply(lambda x :determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.mmddyy, DateSeparator.slash, x))\n",
+    "df['delivery_fy_quarter'] = df['delivery_date'].apply(lambda x :determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.mmddyy, DateSeparator.slash, x))\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(df.head(5))"
    ]
   }
  ],
