Fixed panda with lamada functions in the .apply()

--- a/pandas/01-My Panda dates.ipynb
+++ b/pandas/01-My Panda dates.ipynb
@@ -885,26 +885,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   ID order_date delivery_date  order_to_delivery_days     order_cy_quarter  \\\n",
-      "0   1    5/24/98        2/5/99                     257   CY1999: Quarter II   \n",
-      "1   2    4/22/92        3/6/98                    2144   CY1993: Quarter II   \n",
-      "2   4    2/10/91       8/26/92                     563    CY1992: Quarter I   \n",
-      "3   5    7/21/92      11/20/97                    1948  CY1993: Quarter III   \n",
-      "4   7     9/2/93       6/10/98                    1742  CY1994: Quarter III   \n",
+      "   ID order_date delivery_date  order_to_delivery_days  \\\n",
+      "0   1    5/24/98        2/5/99                     257   \n",
+      "1   2    4/22/92        3/6/98                    2144   \n",
+      "2   4    2/10/91       8/26/92                     563   \n",
+      "3   5    7/21/92      11/20/97                    1948   \n",
+      "4   7     9/2/93       6/10/98                    1742   \n",
       "\n",
-      "   delivery_cy_quarter     order_fy_quarter  delivery_fy_quarter  \n",
-      "0    CY2000: Quarter I   FY1999: Quarter IV  FY2000: Quarter III  \n",
-      "1    CY1999: Quarter I   FY1993: Quarter IV  FY1999: Quarter III  \n",
-      "2  CY1993: Quarter III  FY1992: Quarter III    FY1993: Quarter I  \n",
-      "3   CY1998: Quarter IV    FY1993: Quarter I   FY1998: Quarter II  \n",
-      "4   CY1999: Quarter II    FY1994: Quarter I   FY1999: Quarter IV  \n"
+      "  order_date_plus_25years     order_cy_quarter  delivery_cy_quarter  \\\n",
+      "0              2023-05-24   CY1999: Quarter II    CY2000: Quarter I   \n",
+      "1              2017-04-22   CY1993: Quarter II    CY1999: Quarter I   \n",
+      "2              2016-02-10    CY1992: Quarter I  CY1993: Quarter III   \n",
+      "3              2017-07-21  CY1993: Quarter III   CY1998: Quarter IV   \n",
+      "4              2018-09-02  CY1994: Quarter III   CY1999: Quarter II   \n",
+      "\n",
+      "      order_fy_quarter  delivery_fy_quarter  \n",
+      "0   FY1999: Quarter IV  FY2000: Quarter III  \n",
+      "1   FY1993: Quarter IV  FY1999: Quarter III  \n",
+      "2  FY1992: Quarter III    FY1993: Quarter I  \n",
+      "3    FY1993: Quarter I   FY1998: Quarter II  \n",
+      "4    FY1994: Quarter I   FY1999: Quarter IV  \n"
      ]
     }
    ],
@@ -918,6 +925,7 @@
     "# Apply the functions to the DataFrame\n",
     "\n",
     "df['order_to_delivery_days'] = df.apply(lambda x: datediff(StrpTime.mmddyy, DateSeparator.slash, 'DD', x['order_date'], x['delivery_date']), axis=1)\n",
+    "df['order_date_plus_25years'] = df['order_date'].apply(lambda x: dateadd(StrpTime.mmddyy, DateSeparator.slash,'YY',25,x))\n",
     "df['order_cy_quarter'] = df['order_date'].apply(lambda x: determine_quarter_and_year(QuarterAnchorMonth.January, StrpTime.mmddyy, DateSeparator.slash, x))\n",
     "df['delivery_cy_quarter'] = df['delivery_date'].apply(lambda x :determine_quarter_and_year(QuarterAnchorMonth.January, StrpTime.mmddyy, DateSeparator.slash, x))\n",
     "df['order_fy_quarter'] = df['order_date'].apply(lambda x :determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.mmddyy, DateSeparator.slash, x))\n",
