df = pd.read_csv("ecommerce.csv") fixed

--- a/pandas/01-My Panda dates.ipynb
+++ b/pandas/01-My Panda dates.ipynb
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -896,22 +896,16 @@
       "0   1    5/24/98        2/5/99                     257   \n",
       "1   2    4/22/92        3/6/98                    2144   \n",
       "2   4    2/10/91       8/26/92                     563   \n",
-      "3   5    7/21/92      11/20/97                    1948   \n",
-      "4   7     9/2/93       6/10/98                    1742   \n",
       "\n",
-      "  order_date_plus_25years     order_cy_quarter  delivery_cy_quarter  \\\n",
-      "0              2023-05-24   CY1999: Quarter II    CY2000: Quarter I   \n",
-      "1              2017-04-22   CY1993: Quarter II    CY1999: Quarter I   \n",
-      "2              2016-02-10    CY1992: Quarter I  CY1993: Quarter III   \n",
-      "3              2017-07-21  CY1993: Quarter III   CY1998: Quarter IV   \n",
-      "4              2018-09-02  CY1994: Quarter III   CY1999: Quarter II   \n",
+      "  order_date_plus_25years    order_cy_quarter  delivery_cy_quarter  \\\n",
+      "0              2023-05-24  CY1999: Quarter II    CY2000: Quarter I   \n",
+      "1              2017-04-22  CY1993: Quarter II    CY1999: Quarter I   \n",
+      "2              2016-02-10   CY1992: Quarter I  CY1993: Quarter III   \n",
       "\n",
       "      order_fy_quarter  delivery_fy_quarter  \n",
       "0   FY1999: Quarter IV  FY2000: Quarter III  \n",
       "1   FY1993: Quarter IV  FY1999: Quarter III  \n",
-      "2  FY1992: Quarter III    FY1993: Quarter I  \n",
-      "3    FY1993: Quarter I   FY1998: Quarter II  \n",
-      "4    FY1994: Quarter I   FY1999: Quarter IV  \n"
+      "2  FY1992: Quarter III    FY1993: Quarter I  \n"
      ]
     }
    ],
@@ -932,7 +926,7 @@
     "df['delivery_fy_quarter'] = df['delivery_date'].apply(lambda x :determine_quarter_and_year(QuarterAnchorMonth.July, StrpTime.mmddyy, DateSeparator.slash, x))\n",
     "\n",
     "# Display the DataFrame\n",
-    "print(df.head(5))"
+    "print(df.head(3))"
    ]
   }
  ],
